# DynamicLibraryCMake

./: CMakeLists.txt
DynamicLib/: DynamicLib.cpp
DynamicLibraryCMake/: Leaver.cpp  Leaver.h
